# FanTale

./: .gitignore  DESIGN_GUIDE.md  Makefile  PROJECT_STRUCTURE.md  README.md  TODO.md  batch.md  sample.md
backend/: Makefile  README.md  pyproject.toml  requirements.txt  workflow.md
backend/app/: celery_app.py  main.py
backend/app/agents/: graph.py  llm.py  utils.py
backend/app/agents/chapter/: chain.py  model.py  prompt.py
backend/app/agents/story/: chain.py  model.py  prompt.py
backend/app/api/routes/: auth.py  stories.py
backend/app/core/: config.py
backend/app/db/: repository.py
backend/app/db/models/: __init__.py  base.py  chapter.py  chapterplot.py  story.py  user.py
backend/app/db/repository/: __init__.py  base.py  chapter_plot_repository.py  chapter_repository.py  fake_repository.py  story_repository.py
backend/app/schemas/: auth.py  story.py
backend/app/services/: chapter_service.py  mappers.py  story_service.py
backend/app/tasks/: __init__.py  chapter_tasks.py  story_tasks.py
backend/tests/: test_episode_generation.py  test_feedback_agent.py  test_format.py  test_plot_generation.py
frontend/: Makefile  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
frontend/apps/web/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
frontend/apps/web/app/: globals.css  layout.tsx  page.tsx
frontend/apps/web/app/fandoms/: page.tsx
frontend/apps/web/app/me/: page.tsx
frontend/apps/web/components/: NavBar.tsx  QueryProvider.tsx  ThemeToggle.tsx
frontend/apps/web/lib/: api.ts
(+7 files in other folders)
