[project]
name = "fantale-backend"
version = "0.1.0"
description = "FanTale FastAPI backend"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [ { name = "FanTale" } ]
dependencies = [
  "fastapi>=0.112.2",
  "uvicorn[standard]>=0.30.5",
  "pydantic[email]>=2.7.4",
  "SQLAlchemy>=2.0.30",
  "celery>=5.5.3",
  "redis>=5.0.0",
  "langchain>=0.3.27",
  "langchain-google-genai>=2.1.9",
  "dotenv>=0.9.9",
  "langchain-tavily>=0.2.11",
  "pytest>=8.4.1",
  "langchain-community>=0.3.27",
  "pydantic-settings>=2.10.1",
  "langgraph>=0.6.4",
  "langgraph-supervisor>=0.0.29",
  "python-jose[cryptography]>=3.3.0",
  "google-auth>=2.29.0",
  "httpx>=0.27.0",
  "langsmith>=0.4.13",
  "graphviz>=0.21",
  "pygraphviz>=1.14",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = true
dev-dependencies = [
  "ruff>=0.5.6",
  "flower>=2.0.1"
]
